# ChangeLog for dev-python/webarticle2text
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*webarticle2text-2.0.1 (15 May 2015)

  15 May 2015; Johann Schmitz <ercpe@gentoo.org> +webarticle2text-2.0.1.ebuild:
  Version bump of webarticle2text

*webarticle2text-1.2.6_pre20130824 (24 Aug 2013)

  24 Aug 2013; Johann Schmitz <ercpe@gentoo.org>
  +webarticle2text-1.2.6_pre20130824.ebuild,
  -webarticle2text-1.2.6_beta_pre20130824.ebuild:
  Renamed ebuild to correct version

*webarticle2text-1.2.6_beta_pre20130824 (24 Aug 2013)

  24 Aug 2013; Johann Schmitz <ercpe@gentoo.org>
  +webarticle2text-1.2.6_beta_pre20130824.ebuild, metadata.xml:
  Ebuild for bleeding edge

*webarticle2text-1.2.6_pre20130817 (18 Aug 2013)

  18 Aug 2013; johann@j-schmitz.net +metadata.xml,
  +webarticle2text-1.2.6_pre20130817.ebuild:
  Added ebuild for webarticle2text